--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,9 @@ Access to the API can be requested at https://portal.api.vinnova.se. This client
 
 Version 1 of the API conforms to this information model:
 
-![GDP information schema v 1](gdp_schema_v1.png)
+## Information model
+
+![GDP information schema v 1](man/figures/gdp_schema_v1.png)
 
 ## Installation
 
@@ -58,8 +60,14 @@ harvest <- gdp_harvest(organisation = my_orgid)
 # export the data into a local database (duckdb, see https://duckdb.org)
 destination_dir <- gdp_export_database(harvest)
 
+# upload the database to S3 object storage (given a specific S3 alias / path specification)
+gdp_upload_files(sourcedir = destination_dir, s3_targetdir = "kthb/projects/gdp")
+
 # export the resulting tables individually as .csv and .parquet
 gdp_export_tables(harvest, destdir = "/tmp/gdp")
+
+# upload the csv and parquet files to S3
+gdp_upload_files(sourcedir = "/tmp/gdp", s3_targetdir = "kthb/projects/gdp")
 
 ```
 
