add fcns to read and write gdp api lite resources

--- a/README.Rmd
+++ b/README.Rmd
@@ -95,3 +95,54 @@ my_proposals$topics |>
   arrange(desc(req_amount))
 
 ```
+
+## Harvesting from GDP data providers that implement the "lite" JSON response format
+
+If a provider uses the "lite" JSON response format, a couple of functions allow for retrieving all data in one request in tabular form:
+
+```{r, eval=FALSE}
+library(gdp)
+library(tidyverse)
+
+read_gdp_lite(
+  url = "https://data.bibliometrics.lib.kth.se/projects/em/fundings.json", 
+  entity = "finansieradeaktiviteter"
+)
+
+read_gdp_lite(
+  url = "https://data.bibliometrics.lib.kth.se/projects/em/calls.json", 
+  entity = "utlysningar"
+)
+
+read_gdp_lite(
+  url = "https://data.bibliometrics.lib.kth.se/projects/em/proposals.json", 
+  entity = "ansokningar"
+)
+
+```
+
+For such a provider, all data can be harvested and exported in one go as a single duckdb database file:
+
+```{r, eval=FALSE}
+library(gdp)
+library(tidyverse)
+
+exported_db <- 
+  write_gdp_lite(
+    url_proposals = "https://data.bibliometrics.lib.kth.se/projects/em/proposals.json",
+    url_calls = "https://data.bibliometrics.lib.kth.se/projects/em/calls.json",
+    url_fundings = "https://data.bibliometrics.lib.kth.se/projects/em/fundings.json"
+  )
+
+# by default the exported_db will be located in the temp directory
+
+```
+
+After doing such a harvest, results can be transferred to S3 storage for remote access or the resulting db can be queried (locally or remotely) with tools like:
+
+- https://sql-workbench.com 
+- https://shell.duckdb.com
+- https://harlequin.sh/
+
+This single file database format can be used from R, Python, NodeJS and many other programming languages.
+
